[metadata]
name = asynctest
version = 0.13.0
url = https://github.com/Martiusweb/asynctest/
author = Martin Richard
author_email = martius@martiusweb.net
classifiers =
   Development Status :: 3 - Alpha
   Intended Audience :: Developers
   Topic :: Software Development :: Testing
   License :: OSI Approved :: Apache Software License
   Programming Language :: Python :: 3.5
   Programming Language :: Python :: 3.6
   Programming Language :: Python :: 3.7
   Programming Language :: Python :: Implementation :: CPython
   Programming Language :: Python :: Implementation :: PyPy
license = Apache 2
license_file = LICENSE.md
description = Enhance the standard unittest package with features for testing asyncio libraries
long_description = file: README.rst
keywords =
    unittest
    test
    testing
    asyncio
    tulip
    selectors
    async
    mock

[options]
packages = find:
python_requires = >=3.5
zip_safe = True

[pylama]
format = pylint
skip = */.tox/*,*/.env/*
linters = pylint,mccabe,pep8
ignore = F0401,C0111,E731
